# rpi-remote-monitor

./: CMakeLists.txt
src/: CMakeLists.txt
src/consoleclient/: CMakeLists.txt  consoleclient.c
src/libclient/: CMakeLists.txt  client.c  include.h
src/server/: CMakeLists.txt  Makefile  array.c  array.h  main.c  measurement.h  msgbuf.c  msgbuf.h  readstat.c  readstat.h
src/shared/: measurement.h  msgbuf.c  msgbuf.h
